--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@types/shortid": "^0.0.32",
     "expo": "~50.0.14",
+    "expo-linking": "^6.2.2",
     "expo-status-bar": "~1.11.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.2.0",
+    "shortid": "^2.2.16",
+    "styled-components": "^6.1.8",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "prettier": "3.2.5",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "author": "shenfz <1328919715@qq.com>",
+  "license": "MIT"
 }
